--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,7 @@
-REACT_APP_API_URL=
-GENERATE_SOURCEMAP=
+# Frontend Environment Variables
+
+# API Base URL - will be automatically set by Render to backend service URL
+REACT_APP_API_URL=http://localhost:5000
+
+# Build optimization - set to false in production
+GENERATE_SOURCEMAP=true
