--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,10 @@
+# Backend Environment Variables
+
+# Server Configuration
 PORT=5000
 NODE_ENV=development
+
+# JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_here_change_in_production
 JWT_EXPIRES_IN=7d
 
@@ -22,3 +27,6 @@ ALLOWED_FILE_TYPES=image/jpeg,image/png,image/jpg,application/pdf,application/ms
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Frontend URL for CORS (set this in production)
+FRONTEND_URL=http://localhost:3000
