--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "npm run prisma:generate && tsc",
+    "build": "npm run prisma:generate && tsc -p tsconfig.build.json",
+    "build:strict": "npm run prisma:generate && tsc",
     "postinstall": "npm run prisma:generate",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
@@ -39,19 +40,19 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "winston": "^3.11.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
+    "zod": "^3.22.4",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.19.14",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
